Update print statement

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 Data Engineer & Cloud Workflow Automation Specialist
             </h2>
             <p class="max-w-3xl text-slate-400 text-lg mb-10">
-                Data Engineer with **2+ years** of experience designing resilient **data pipelines**, **cloud workflows (GCP)**, and **BI solutions**. Proven ability to leverage Python and automation tools to deliver measurable improvements, including **reducing manual effort by 60%**.
+                Data Engineer with *2+ years* of experience designing resilient **data pipelines**, **cloud workflows (GCP)**, and **BI solutions**. Proven ability to leverage Python and automation tools to deliver measurable improvements, including **reducing manual effort by 60%**.
             </p>
             <div class="flex space-x-4">
                 <a onclick="scrollToSection('projects')" class="btn-primary px-6 py-3 rounded-xl font-semibold text-lg hover:ring-2 ring-cyan-400 cursor-pointer">
@@ -376,3 +376,4 @@
 
 </body>
 </html>
+
