--- a/index.html
+++ b/index.html
@@ -53,6 +53,24 @@
             color: #94a3b8;
             background-color: #1f2937;
         }
+        /* Responsive Iframe Container for the Dashboard */
+        .looker-embed-container {
+            position: relative;
+            width: 100%;
+            /* 3:2 Aspect Ratio (adjust as needed for your dashboard) */
+            padding-bottom: 66.66%; 
+            height: 0;
+            overflow: hidden;
+            border-radius: 0.75rem; /* rounded-xl */
+        }
+        .looker-embed-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: 0;
+        }
     </style>
     <script>
         // Initialize Lucide icons
@@ -98,7 +116,7 @@
                 Data Engineer & Cloud Workflow Automation Specialist
             </h2>
             <p class="max-w-3xl text-slate-400 text-lg mb-10">
-                Data Engineer with *2+ years* of experience designing resilient **data pipelines**, **cloud workflows (GCP)**, and **BI solutions**. Proven ability to leverage Python and automation tools to deliver measurable improvements, including **reducing manual effort by 60%**.
+                Data Engineer with **2+ years** of experience designing resilient **data pipelines**, **cloud workflows (GCP)**, and **BI solutions**. Proven ability to leverage Python and automation tools to deliver measurable improvements, including **reducing manual effort by 60%**.
             </p>
             <div class="flex space-x-4">
                 <a onclick="scrollToSection('projects')" class="btn-primary px-6 py-3 rounded-xl font-semibold text-lg hover:ring-2 ring-cyan-400 cursor-pointer">
@@ -234,8 +252,47 @@
             </p>
 
             <div class="space-y-16">
+
+                <!-- NEW PROJECT 1: Interactive Looker Studio Dashboard (EMBED) - NOW LIVE -->
+                <div class="card p-8 rounded-2xl border-l-4 border-fuchsia-500">
+                    <h4 class="text-3xl font-bold text-fuchsia-400 mb-3">Interactive BI Dashboard (Looker Studio)</h4>
+                    <p class="text-slate-400 text-lg mb-6">Live demonstration of business information display facilitated by GCP and Python pipelines.</p>
+
+                    <div class="grid md:grid-cols-3 gap-6 mb-6">
+                        <div class="col-span-1">
+                            <h5 class="font-semibold text-slate-300 mb-2">Technologies</h5>
+                            <div class="flex flex-wrap gap-2">
+                                <span class="tech-tag px-3 py-1 rounded-full text-sm">Google Looker Studio</span>
+                                <span class="tech-tag px-3 py-1 rounded-full text-sm">GCP BigQuery</span>
+                                <span class="tech-tag px-3 py-1 rounded-full text-sm">Python Data Pipeline</span>
+                                <span class="tech-tag px-3 py-1 rounded-full text-sm">Looker API / Google APIs</span>
+                            </div>
+                        </div>
+                        <div class="col-span-2">
+                            <h5 class="font-semibold text-slate-300 mb-2">Key Highlights</h5>
+                            <ul class="list-disc list-inside text-slate-400 space-y-1">
+                                <li>Directly integrated with GCP BigQuery via an automated data pipeline.</li>
+                                <li>Designed to improve data accessibility and facilitate quicker stakeholder decision-making.</li>
+                                <li>This project demonstrates end-to-end ELT/BI capability from source to visualization.</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <!-- Looker Studio Embed Container -->
+                    <div class="looker-embed-container">
+                        <!-- PASTE YOUR LOOKER STUDIO IFRAME CODE HERE -->
+                        <iframe 
+                            width="100%" 
+                            height="100%" 
+                            src="https://lookerstudio.google.com/embed/reporting/d1531916-abb9-4b6d-ba63-aff9a4465eda/page/VgD" 
+                            allowfullscreen 
+                            style="border:0;"
+                        ></iframe>
+                    </div>
+                </div>
+
                 
-                <!-- Project 1: Client Data Automation Solutions -->
+                <!-- Project 2: Client Data Automation Solutions (Shifted down) -->
                 <div class="card p-8 rounded-2xl">
                     <h4 class="text-3xl font-bold text-accent mb-3">Client Data Automation Solutions</h4>
                     <p class="text-slate-400 text-lg mb-6">Built and deployed automated pipelines for enterprise reporting (HCLTech)</p>
@@ -272,7 +329,7 @@
                     </div>
                 </div>
 
-                <!-- Project 2: Automated Data Mining, Cleaning and Loading (ETL) -->
+                <!-- Project 3: Automated Data Mining, Cleaning and Loading (ETL) -->
                 <div class="card p-8 rounded-2xl">
                     <h4 class="text-3xl font-bold text-accent mb-3">Automated UK Government Data ETL</h4>
                     <p class="text-slate-400 text-lg mb-6">Developed an ETL tool to ingest and refine large datasets for a client web application.</p>
@@ -305,7 +362,7 @@
                     </div>
                 </div>
 
-                <!-- Project 3: Sentiment Analysis of Scraped Content -->
+                <!-- Project 4: Sentiment Analysis of Scraped Content -->
                 <div class="card p-8 rounded-2xl">
                     <h4 class="text-3xl font-bold text-accent mb-3">Content Sentiment Analysis Pipeline</h4>
                     <p class="text-slate-400 text-lg mb-6">Automated script to calculate sentiment from 200+ scraped websites.</p>
@@ -376,4 +433,3 @@
 
 </body>
 </html>
-
