<Strong> tag to show bold words

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 Data Engineer & Cloud Workflow Automation Specialist
             </h2>
             <p class="max-w-3xl text-slate-400 text-lg mb-10">
-                Data Engineer with **2+ years** of experience designing resilient **data pipelines**, **cloud workflows (GCP)**, and **BI solutions**. Proven ability to leverage Python and automation tools to deliver measurable improvements, including **reducing manual effort by 60%**.
+                Data Engineer with <strong>2+ years</strong> of experience designing resilient <strong>data pipelines</strong>, <strong>cloud workflows (GCP)</strong>, and <strong>BI solutions</strong>. Proven ability to leverage Python and automation tools to deliver measurable improvements, including <strong>reducing manual effort by 60%</strong>.
             </p>
             <div class="flex space-x-4">
                 <a onclick="scrollToSection('projects')" class="btn-primary px-6 py-3 rounded-xl font-semibold text-lg hover:ring-2 ring-cyan-400 cursor-pointer">
@@ -202,19 +202,19 @@
                     <ul class="list-none space-y-3 text-slate-400">
                         <li class="flex items-start">
                             <i data-lucide="check-circle" class="w-5 h-5 text-accent mr-3 mt-1 shrink-0"></i>
-                            Built end-to-end data pipelines for Power BI dashboards, sourcing data directly from **GCP BigQuery**.
+                            Built end-to-end data pipelines for Power BI dashboards, sourcing data directly from <strong>GCP BigQuery</strong>.
                         </li>
                         <li class="flex items-start">
                             <i data-lucide="check-circle" class="w-5 h-5 text-accent mr-3 mt-1 shrink-0"></i>
-                            Deployed **GCP CI/CD workflows** for Python-based Cloud Run functions to ensure robust and automated data flows.
+                            Deployed <strong>GCP CI/CD workflows</strong> for Python-based Cloud Run functions to ensure robust and automated data flows.
                         </li>
                         <li class="flex items-start">
                             <i data-lucide="check-circle" class="w-5 h-5 text-accent mr-3 mt-1 shrink-0"></i>
-                            Developed a critical automation solution using **PowerApps, Power Automate, and FastAPI**, resulting in a **60% reduction in manual effort** across existing processes.
+                            Developed a critical automation solution using <strong>PowerApps, Power Automate, and FastAPI</strong>, resulting in a <strong>60% reduction in manual effort</strong> across existing processes.
                         </li>
                         <li class="flex items-start">
                             <i data-lucide="check-circle" class="w-5 h-5 text-accent mr-3 mt-1 shrink-0"></i>
-                            Implemented **Terraform IaC** for disaster recovery of GCP infrastructure, ensuring one-click infra rebuild and **100% business continuity**.
+                            Implemented <strong>Terraform IaC</strong> for disaster recovery of GCP infrastructure, ensuring one-click infra rebuild and <strong>100% business continuity</strong>.
                         </li>
                     </ul>
                 </div>
@@ -229,15 +229,15 @@
                     <ul class="list-none space-y-3 text-slate-400">
                         <li class="flex items-start">
                             <i data-lucide="check-circle" class="w-5 h-5 text-yellow-500 mr-3 mt-1 shrink-0"></i>
-                            Designed **FastAPIs** and pipelines for Looker Studio integration with GCP, eliminating manual intervention and **improving reporting speed by 30%**.
+                            Designed <strong>FastAPIs</strong> and pipelines for Looker Studio integration with GCP, eliminating manual intervention and <strong>improving reporting speed by 30%</strong>.
                         </li>
                         <li class="flex items-start">
                             <i data-lucide="check-circle" class="w-5 h-5 text-yellow-500 mr-3 mt-1 shrink-0"></i>
-                            Developed Python-based **ETL scripts** to interact with external APIs (RapidAPI, Looker API), automating data ingestion.
+                            Developed Python-based <strong>ETL scripts</strong> to interact with external APIs (RapidAPI, Looker API), automating data ingestion.
                         </li>
                         <li class="flex items-start">
                             <i data-lucide="check-circle" class="w-5 h-5 text-yellow-500 mr-3 mt-1 shrink-0"></i>
-                            Automated workflows utilizing **GCP (BigQuery), DigitalOcean, and ELK Stack (Kibana)** for scalable data operations.
+                            Automated workflows utilizing <strong>GCP (BigQuery), DigitalOcean, and ELK Stack (Kibana)</strong> for scalable data operations.
                         </li>
                     </ul>
                 </div>
@@ -311,9 +311,9 @@
                         <div class="col-span-2">
                             <h5 class="font-semibold text-slate-300 mb-2">Key Achievements</h5>
                             <ul class="list-disc list-inside text-slate-400 space-y-1">
-                                <li>Streamlined data flow (SharePoint $\rightarrow$ BigQuery $\rightarrow$ Power BI), reducing manual reporting by **35%**.</li>
-                                <li>Designed **CI/CD workflows** for Cloud Run functions, **cutting deployment time by 60%**.</li>
-                                <li>Automated data freeze process, reducing manual work from **4 hours to 45 minutes**.</li>
+                                <li>Streamlined data flow (SharePoint $\rightarrow$ BigQuery $\rightarrow$ Power BI), reducing manual reporting by <strong>35%</strong>.</li>
+                                <li>Designed <strong>CI/CD workflows</strong> for Cloud Run functions, <strong>cutting deployment time by 60%</strong>.</li>
+                                <li>Automated data freeze process, reducing manual work from <strong>4 hours to 45 minutes</strong>.</li>
                             </ul>
                         </div>
                     </div>
