--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 
                     <!-- ARCHITECTURE DIAGRAM 1: BI_pipeline.png -->
                     <div class="architecture-image-container mb-4">
-                        <img src="Pictures/BI_pipeline.png" alt="Architectural diagram showing SharePoint, GCP BigQuery, and Power BI pipeline flow" onerror="this.onerror=null;this.src='https://placehold.co/800x300/1f2937/94a3b8?text=BI_pipeline.png+Diagram+Placeholder';">
+                        <img src="Pictures/BI_Pipeline.png" alt="Architectural diagram showing SharePoint, GCP BigQuery, and Power BI pipeline flow">
                     </div>
 
                     <div class="text-right mt-4">
@@ -485,3 +485,4 @@
 
 </body>
 </html>
+
