Adding Gallery Page

--- a/index.html
+++ b/index.html
@@ -162,7 +162,10 @@
                 <a onclick="scrollToSection('projects')" class="btn-primary px-6 py-3 rounded-xl font-semibold text-lg hover:ring-2 ring-cyan-400 cursor-pointer">
                     View Projects
                 </a>
-                <a href="mailto:sparshv2325@gmail.com" class="bg-slate-700 text-white px-6 py-3 rounded-xl font-semibold text-lg hover:bg-slate-600 transition">
+				<a href="portfolio-gallery.html" class="bg-fuchsia-600 text-white px-6 py-3 rounded-xl font-semibold text-lg hover:bg-fuchsia-500 transition shadow-lg">
+				<i data-lucide="image" class="w-5 h-5 inline-block mr-2"></i> View Gallery
+					</a>
+<a href="mailto:sparshv2325@gmail.com" class="bg-slate-700 text-white px-6 py-3 rounded-xl font-semibold text-lg hover:bg-slate-600 transition">
                     <i data-lucide="mail" class="w-5 h-5 inline-block mr-2"></i> Get In Touch
                 </a>
             </div>
@@ -485,4 +488,3 @@
 
 </body>
 </html>
-
